--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -1,5 +1,6 @@
 # Color Setting
 [color]
+    # equals to ui = auto, and auto is default since 1.8.4
     ui = true
 [color "diff-highlight"]
     oldNormal = red bold
