--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -52,6 +52,8 @@
     path = ~/.config/git/proxy.config
 [include]
     path = ~/.config/git/instead.config
+[include]
+    path = ~/.config/git/aliases.config
 
 [includeIf "gitdir:~/Data/workspace/aosc/**"]
     path = ~/.config/git/aosc.config
