--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,9 +1,44 @@
-run-shell "powerline-daemon -q"
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
-set -g status-interval 1
+#set -g @nord_tmux_no_patched_font "1"
+#run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
 
-bind-key H pipe-pane -o "exec cat >>$HOME/'#W-tmux.log'"
-# set-option -g status-position top
+# COLOUR (base16)
+
+# default statusbar colors
+set-option -g status-style "fg=#D8DEE9,bg=#3B4252"
+
+# default window title colors
+set-window-option -g window-status-style "fg=#D8DEE9,bg=default"
+
+# active window title colors
+set-window-option -g window-status-current-style "fg=#5E81AC,bg=default"
+
+# pane border
+set-option -g pane-border-style "fg=#3B4252"
+set-option -g pane-active-border-style "fg=#434C5E"
+
+# message text
+set-option -g message-style "fg=#E5E9F0,bg=#3B4252"
+
+# pane number display
+set-option -g display-panes-active-colour "#BF616A"
+set-option -g display-panes-colour "#5E81AC"
+
+# clock
+set-window-option -g clock-mode-colour "#BF616A"
+
+# copy mode highligh
+set-window-option -g mode-style "fg=#D8DEE9,bg=#434C5E"
+
+# bell
+set-window-option -g window-status-bell-style "fg=#3B4252,bg=#88C0D0"
+
+set -g status-left "#[bg=bold] #S "
+set -g status-right " %Y-%m-%d #[bg=nobold,noitalics,nounderscore] %H:%M #[bg=nobold,noitalics,nounderscore] #[bg=bold] #H "
+
+set -g window-status-format " #I #W #F"
+set -g window-status-current-format " #I #W #F"
+set -g window-status-separator ""
+
 set -g mouse on
 
 ## set the default TERM
@@ -23,12 +58,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-#set -g @plugin 'arcticicestudio/nord-tmux'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
