--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -4,3 +4,6 @@
 
     # from trevor bramble https://twitter.com/TrevorBramble/status/774292970681937920
     list-alias = !git config -l | grep ^alias | cut -c 7- | sort
+
+    slog = log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
+    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
