git: add alias whoami

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -1,9 +1,13 @@
 [alias]
-    # List contributors with number of commits
-    contributors = shortlog --summary --numbered --email --group=author
-
     # from trevor bramble https://twitter.com/TrevorBramble/status/774292970681937920
     list-alias = !git config -l | grep ^alias | cut -c 7- | sort
+    
+    # Show the user email for the current repository.
+    # TODO: print both Name and EMail
+    whoami = config --get user.email
 
+    # List contributors with number of commits
+    contributors = shortlog --summary --numbered --email --group=author
+    
     slog = log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
     linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
