--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -11,3 +11,7 @@
     
     slog = log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
     linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
+    
+    # Remove branches that have already been merged with main.
+    # a.k.a. 'delete merged'
+    delete-merged = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
