git: replace true with auto in color.ui

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -1,7 +1,7 @@
 # Color Setting
 [color]
-    # equals to ui = auto, and auto is default since 1.8.4
-    ui = true
+    # auto is default since 1.8.4
+    ui = auto
 [color "diff-highlight"]
     oldNormal = red bold
     oldHighlight = red bold 52
