git: enable verbose merge commit message

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -44,6 +44,10 @@
     lineNumber = true
     patternType = perl
 
+[merge]
+    # Include summaries of merged commits in newly created merge commit messages
+    log = true
+
 [include]
     path = ~/.config/git/format.config
 [include]
