git: add config to using hexdump diff binary but disable

--- a/git/.config/git/diff-specified.config
+++ b/git/.config/git/diff-specified.config
@@ -1,2 +1,6 @@
 [diff "word"]
     textconv = docx2txt-git-diff
+
+# Use `hexdump` to diff binary files. Maybe enable in future
+#[diff "bin"]
+#    textconv = hexdump -v -C
