git: using new git log format

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -9,8 +9,8 @@
     # List contributors with number of commits
     contributors = shortlog --summary --numbered --email --group=author
     
-    slog = log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
-    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(magenta)%h%Creset -%C(red)%d%Creset %s %C(green)(%cr) %C(cyan)<%an>%Creset'
+    slog = log --all --decorate --oneline --graph --format='%C(yellow)%h%Creset - %s %C(green)(%cr) %C(bold blue)<%an>%Creset %C(red)%d%Creset'
+    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(yellow)%h%Creset - %s %C(green)(%cr) %C(bold blue)<%an>%Creset %C(red)%d%Creset'
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
