git: add instead for gist.github.com

--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -6,5 +6,8 @@
     insteadOf = http://aur.archlinux.org/
     insteadOf = git://aur.archlinux.org/
 # https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/
-[url "ssh://git@github.com/"]
-	insteadOf = https://github.com/
+[url "git@github.com/"]
+    insteadOf = https://github.com/
+
+[url "git://gist.github.com/"]
+    insteadOf = "gist:"
