--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -22,6 +22,9 @@
     # https://stackoverflow.com/questions/1043388/record-file-copy-operation-with-git
     # But it seems not work, just set to default until it works.
     #renames = copies
+    # https://blog.github.com/2018-04-05-git-217-released/
+    # https://git-scm.com/docs/git-diff#Documentation/git-diff.txt---color-movedltmodegt
+    #colorMoved = default
 
 # https://lwn.net/Articles/835985/rss
 # https://people.kernel.org/monsieuricon/signed-git-pushes
