git: using diff-so-fancy for interactive

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -10,6 +10,7 @@
 [color "diff"]
     meta = 11
     frag = magenta bold
+    func = 146 bold
     commit = yellow bold
     old = red bold
     new = green bold
@@ -19,6 +20,15 @@
     pager = diff-so-fancy | less --tabs=4 -RFX
     # enable escape for code large than 0x80
     quotePath = false
+
+[interactive]
+    diffFilter = diff-so-fancy --patch
+
+[diff-so-fancy]
+    # By default, the separator for the file header uses Unicode line-drawing characters. If this is causing output errors on your terminal, set this to false to use ASCII characters instead. (Default: true)
+    # https://github.com/so-fancy/diff-so-fancy#useunicoderuler
+    # set to false to avoid problem in non-Unicode terminals such as Linuxfb
+    useUnicodeRuler = false
 
 # log format: ISO8601 date format and show both Author and Committer
 [log]
