--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -14,4 +14,4 @@
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
-    delete-merged = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
+    delete-merged = "!f(){ if command -v git-delete-merged-branches >/dev/null 2>&1; then git delete-merged-branches; else git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d; fi }; f"
