weechat: using TLS1.3 only

--- a/weechat/.weechat/plugins.conf
+++ b/weechat/.weechat/plugins.conf
@@ -10,7 +10,7 @@
 #
 
 [var]
-python.bot2human.bot_nicks = "tg2arch tg2offtopic fzh-tg tg-fzh gentoocnbot gentoozhbot akarin3 susecn_bot StaphBot offbot"
+python.bot2human.bot_nicks = "tg2arch tg2offtopic fzh-tg tg-fzh gentoocnbot gentoozhbot akarin3 susecn_bot StaphBot offbot fedora_zh_bridge xmppbot"
 python.bot2human.nick_content_re.0 = "\[(?:\x03[0-9,]+)?(?P<nick>[^:]+?)\x0f?\] (?P<text>.*)"
 python.bot2human.nick_content_re.1 = "(?:\x03[0-9,]+)?\[(?P<nick>[^:]+?)\]\x0f? (?P<text>.*)"
 python.bot2human.nick_content_re.2 = "\((?P<nick>[^:]+?)\) (?P<text>.*)"
