--- a/weechat/.weechat/relay.conf
+++ b/weechat/.weechat/relay.conf
@@ -38,7 +38,7 @@ password = "relay"
 password_hash_algo = "*"
 password_hash_iterations = 100000
 ssl_cert_key = "%h/ssl/relay.pem"
-ssl_priorities = "NORMAL:-VERS-SSL3.0"
+ssl_priorities = "SECURE256:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:-VERS-DTLS0.9:-VERS-DTLS1.0:-VERS-DTLS1.2"
 totp_secret = ""
 totp_window = 0
 websocket_allowed_origins = ""
