--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -160,7 +160,7 @@ ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_password = ""
-ssl_priorities = "NORMAL:-VERS-SSL3.0"
+ssl_priorities = "SECURE256:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:-VERS-DTLS0.9:-VERS-DTLS1.0:-VERS-DTLS1.2"
 ssl_verify = on
 usermode = ""
 username = "coelacanthus"
@@ -195,7 +195,7 @@ libera.local_hostname
 libera.usermode
 libera.command
 libera.command_delay
-libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh"
+libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,#debian-zh"
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
