git: add alias to rerere-train

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -15,3 +15,6 @@
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
     delete-merged = "!f(){ if command -v git-delete-merged-branches >/dev/null 2>&1; then git delete-merged-branches; else git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d; fi }; f"
+    
+    # Train Rerere in repository
+    rerere-train = !/usr/share/git/rerere-train.sh
