--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -14,7 +14,10 @@
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
-    delete-merged = "!f(){ if command -v git-delete-merged-branches >/dev/null 2>&1; then git delete-merged-branches; else git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d; fi }; f"
+    delete-merged = "!f(){ if command -v git-delete-merged-branches >/dev/null 2>&1; then git delete-merged-branches; else git branch --merged | grep -v '^\\*\\|  master' | xargs -n 1 git branch -d; fi }; f"
     
     # Train Rerere in repository
     rerere-train = !/usr/share/git/rerere-train.sh
+    
+    # List conflict files
+    list-conflict = diff --name-only --diff-filter=U
