--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -33,6 +33,8 @@ PYLINTHOME="$XDG_CACHE_HOME"/pylint
 WGETRC="$XDG_CONFIG_HOME"/wget/config.ini
 # NPM
 NPM_CONFIG_USERCONFIG="$XDG_CONFIG_HOME"/npm/npmrc
+# Ripgrep
+RIPGREP_CONFIG_PATH="$XDG_CONFIG_HOME"/ripgreprc
 # Rustup (Rust)
 RUSTUP_HOME="$XDG_DATA_HOME"/rustup
 # Cargo (Rust)
