git: AOSC using Celeste Liu

--- a/git/.config/git/aosc.config
+++ b/git/.config/git/aosc.config
@@ -1,6 +1,6 @@
 [user]
     email = coelacanthus@aosc.io
-    name = Coelacanthus
+    name = Celeste Liu
     signingkey = E35C89E45867AE35
 
 [commit]
