--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -6,7 +6,7 @@
     insteadOf = http://aur.archlinux.org/
     insteadOf = git://aur.archlinux.org/
 # https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/
-[url "git@github.com/"]
+[url "git@github.com:"]
     pushInsteadOf = https://github.com/
 
 [url "git://gist.github.com/"]
