git: add specified diff for image

--- a/git/.config/git/diff-specified.config
+++ b/git/.config/git/diff-specified.config
@@ -1,6 +1,11 @@
+# convert docx to txt to diff it
 [diff "word"]
     textconv = docx2txt-git-diff
 
-# Use `hexdump` to diff binary files. Maybe enable in future
-#[diff "bin"]
-#    textconv = hexdump -v -C
+# using ImageMagick to generate difference between pics
+[diff "image"]
+    command = compare $2 $1 png:- | montage -geometry +4+4 $2 - $1 png:- | display -title \"$1\" -
+
+# Use `hexdump` to diff binary files.
+[diff "bin"]
+    textconv = hexdump -v -C
