zsh,env: some fixes

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -14,7 +14,7 @@ GTK2_RC_FILES="$XDG_CONFIG_HOME"/gtk-2.0/gtkrc
 # Java
 #_JAVA_OPTIONS="-Djava.util.prefs.userRoot=$XDG_CONFIG_HOME/java"
 #LESSKEY="$XDG_CONFIG_HOME"/less/lesskey
-#LESSHISTFILE="$XDG_CACHE_HOME"/less/history
+LESSHISTFILE="$XDG_CACHE_HOME"/less/history
 # GNU Parallel
 PARALLEL_HOME="$XDG_CONFIG_HOME"/parallel
 # ipython
