fontconfig: using Iosevka SS10 replace Iosevka

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -101,7 +101,7 @@
     </test>
     <edit binding="same" mode="prepend" name="family">
       <!--string>Sarasa Term Slab SC</string-->
-      <string>Iosevka</string>
+      <string>Iosevka SS10</string>
       <!--<string>Fira Code</string>-->
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
@@ -122,7 +122,7 @@
     </test>
     <edit binding="same" mode="prepend" name="family">
       <!--string>Sarasa Term Slab SC</string-->
-      <string>Iosevka</string>
+      <string>Iosevka SS10</string>
       <!--<string>Fira Code</string>-->
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
