kitty: set font size to 12

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,6 +4,9 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+# Font Size
+font_size 12.0
+
 # Render `ligature` (actual OpenType feature `calt` a.k.a. programming ligatures) when the cursor is not over them
 # (available: never always cursor)
 disable_ligatures cursor
