weechat,kitty: add kitty-weechat with GermainZ/kitty-weechat-hints
In WeeChat, `weechat.look.prefix_suffix` and `weechat.look.separator_vertical` must be set to the same value.
Additionally, the `WEECHAT_SEPARATOR` variable in the `weechat_hints.py` script must be updated to reflect that value.

click kitty_mod(default: Ctrl+Shift)+e

[1]: https://github.com/GermainZ/kitty-weechat-hints

--- a/weechat/.weechat/weechat.conf
+++ b/weechat/.weechat/weechat.conf
@@ -131,7 +131,7 @@ scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
 separator_horizontal = "-"
-separator_vertical = ""
+separator_vertical = "|"
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
 window_auto_zoom = off
