--- a/kitty/.local/share/applications/Kitty-Weechat.desktop
+++ b/kitty/.local/share/applications/Kitty-Weechat.desktop
@@ -2,5 +2,5 @@
 Categories=Chat;Network;InstantMessaging;
 Name=Kitty Weechat
 Icon=weechat
-Exec=kitty -o 'map kitty_mod+e kitten hints --customize-processing weechat_hints.py' weechat
+Exec=kitty -o 'map kitty_mod+e kitten hints --customize-processing weechat_hints.py' -o term=xterm-256color weechat
 Type=Application
