env: add hack for kitty IME

--- a/envvars/.config/environment.d/40-ime.conf
+++ b/envvars/.config/environment.d/40-ime.conf
@@ -5,3 +5,6 @@ QT_IM_MODULE=fcitx
 GTK_IM_MODULE=fcitx
 SDL_IM_MODULE=fcitx
 XMODIFIERS=@im=fcitx
+# hack for kitty
+# https://github.com/kovidgoyal/kitty/issues/469#issuecomment-778814173
+GLFW_IM_MODULE=ibus
