tmux: add plugin tmux-plugins/tmux-prefix-highlight

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,3 @@
-#set -g @nord_tmux_no_patched_font "1"
-#run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
-
 # COLOUR (base16)
 
 # default statusbar colors
@@ -32,7 +29,7 @@ set-window-option -g mode-style "fg=#D8DEE9,bg=#434C5E"
 # bell
 set-window-option -g window-status-bell-style "fg=#3B4252,bg=#88C0D0"
 
-set -g status-left "#[bg=bold] #S "
+set -g status-left "#{prefix_highlight} #[bg=bold] #S "
 set -g status-right " %Y-%m-%d #[bg=nobold,noitalics,nounderscore] %H:%M #[bg=nobold,noitalics,nounderscore] #[bg=bold] #H "
 
 set -g window-status-format " #I #W #F"
@@ -53,11 +50,20 @@ if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal tmu
 bind-key h split-window -h
 bind-key v split-window -v
 
+# Prefix Highlight
+set -g @prefix_highlight_fg 'white' # default is 'colour231'
+set -g @prefix_highlight_bg 'blue'  # default is 'colour04'
+set -g @prefix_highlight_empty_has_affixes 'on'
+set -g @prefix_highlight_empty_prompt 'Tmux'
+set -g @prefix_highlight_output_prefix '< '
+set -g @prefix_highlight_output_suffix ' >'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Automatic tpm installation
 if "test ! -d ~/.tmux/plugins/tpm" \
