--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -24,7 +24,7 @@
     #renames = copies
     # https://blog.github.com/2018-04-05-git-217-released/
     # https://git-scm.com/docs/git-diff#Documentation/git-diff.txt---color-movedltmodegt
-    #colorMoved = default
+    colorMoved = default
 
 # https://lwn.net/Articles/835985/rss
 # https://people.kernel.org/monsieuricon/signed-git-pushes
