ssh: proxy: using netcat instead of socat

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -29,7 +29,7 @@ Host github.com
     # socks5 proxy
     ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
     # http proxy
-    #ProxyCommand socat - PROXY:127.0.0.1:%h:%p,proxyport=8889
+    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
 Host shanghai
     User coelacanthus
