ssh: add AOSC Buildbot config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -18,6 +18,8 @@ ServerAliveInterval 120
 # https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
 
+Include config.d/*
+
 Host aur aur.archlinux.org
     IdentityFile ~/.ssh/aur
     Hostname aur.archlinux.org
