weechat: libera.ssl_dhkey_size = 4096

--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -173,7 +173,7 @@ libera.ssl = on
 libera.ssl_cert
 libera.ssl_password
 libera.ssl_priorities
-libera.ssl_dhkey_size
+libera.ssl_dhkey_size = 4096
 libera.ssl_fingerprint
 libera.ssl_verify
 libera.password
