--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -160,7 +160,7 @@ ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_password = ""
-ssl_priorities = "NORMAL:-VERS-SSL3.0:-VERS-TLS1.0:-VERS-TLS1.1:-VERS-TLS1.2:-VERS-DTLS0.9:-VERS-DTLS1.0:-VERS-DTLS1.2"
+ssl_priorities = "NORMAL:-VERS-TLS-ALL:-VERS-DTLS-ALL:+VERS-TLS1.3"
 ssl_verify = on
 usermode = ""
 username = "coelacanthus"
