ssh: enable Compression

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -15,6 +15,9 @@ ControlPersist yes
 # Keep Alive
 ServerAliveInterval 120
 
+# Enable compression to optimize in bad network environment
+Compression yes
+
 # https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
 
