env: add Java Font Rendering setting

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -12,7 +12,7 @@ GOPATH="$XDG_DATA_HOME"/go
 # GTK2
 GTK2_RC_FILES="$XDG_CONFIG_HOME"/gtk-2.0/gtkrc
 # Java
-#_JAVA_OPTIONS="-Djava.util.prefs.userRoot=$XDG_CONFIG_HOME/java"
+_JAVA_OPTIONS="-Djava.util.prefs.userRoot=$XDG_CONFIG_HOME/java"
 #LESSKEY="$XDG_CONFIG_HOME"/less/lesskey
 LESSHISTFILE="$XDG_CACHE_HOME"/less/history
 # GNU Parallel
