--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -100,9 +100,8 @@
       <string>monospace</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
-      <!--string>Sarasa Term Slab SC</string-->
       <string>Iosevka SS10</string>
-      <!--<string>Fira Code</string>-->
+      <string>Iosevka</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
       <string>Sarasa Term J</string>
@@ -121,9 +120,8 @@
       <string>Monospace</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
-      <!--string>Sarasa Term Slab SC</string-->
       <string>Iosevka SS10</string>
-      <!--<string>Fira Code</string>-->
+      <string>Iosevka</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
       <string>Sarasa Term J</string>
@@ -149,3 +147,4 @@
     </edit>
   </match>
 </fontconfig>
+<!-- vim: set nu sts=2 sw=2 et: -->
