fontconfig: add comments on OpenType feature support
[1]: https://bugreports.qt.io/browse/QTBUG-78645
[2]: https://bugzilla.mozilla.org/show_bug.cgi?id=1744765
[3]: https://wiki.archlinux.org/title/Font_configuration/Examples#Disable_ligatures_for_monospaced_fonts

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -19,7 +19,16 @@
           liga: Replaces (by default) sequence of characters with a single ligature glyph
   -->
   
-  <!-- It seems not work -->
+  <!--
+      It wroks, but Firefox and Qt don't support OpenType feature.
+      It’s worth noting that Iosevka SS10 does not include other variants.
+  
+      https://bugreports.qt.io/browse/QTBUG-78645
+      https://bugzilla.mozilla.org/show_bug.cgi?id=1744765
+  
+      Test command: echo -e "y * _ {}" | pango-view --font="Iosevka" /dev/stdin
+  
+  -->
   
   <!-- Iosevka -->
   <match target="font">
