--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -100,6 +100,7 @@
       <string>monospace</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
+      <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
       <string>Sarasa Term SC</string>
