--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -46,6 +46,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -66,6 +67,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -88,6 +90,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -111,6 +114,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -131,6 +135,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -142,6 +147,16 @@
     </test>
     <edit binding="same" mode="assign" name="family">
       <string>Twemoji</string>
+      <!--
+          Twemoji Color Emoji use SVGinOpenType,
+          it is only supported by Firefox.
+          So I using twemoji from Fedora, but it don't use SVG.
+          https://wiki.archlinux.org/title/Fonts#Emoji_and_symbols
+      
+          If FreeType support it, this problem will be solved.
+          https://savannah.nongnu.org/bugs/?46141
+      -->
+      <string>Twemoji Color Emoj</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
