git: using pushInsteadOf for AUR

--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -2,9 +2,9 @@
 # AUR only allow pushing via SSH
 # and with SSH connection multiplex is better
 [url "ssh://aur@aur.archlinux.org/"]
-    insteadOf = https://aur.archlinux.org/
-    insteadOf = http://aur.archlinux.org/
-    insteadOf = git://aur.archlinux.org/
+    pushInsteadOf = https://aur.archlinux.org/
+    pushInsteadOf = http://aur.archlinux.org/
+    pushInsteadOf = git://aur.archlinux.org/
 # https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/
 [url "git@github.com:"]
     pushInsteadOf = https://github.com/
