fontconfig: don't use -- in comment

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -26,7 +26,7 @@
       https://bugreports.qt.io/browse/QTBUG-78645
       https://bugzilla.mozilla.org/show_bug.cgi?id=1744765
   
-      Test command: echo -e "y * _ {}" | pango-view --font="Iosevka" /dev/stdin
+      Test command: echo -e "y * _ {}" | pango-view __font="Iosevka" /dev/stdin
   
   -->
   
