fontconfig: move font features to scan stage

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -31,7 +31,7 @@
   -->
   
   <!-- Iosevka -->
-  <match target="font">
+  <match target="scan">
     <test name="family" compare="eq" ignore-blanks="true">
       <string>Iosevka</string>
     </test>
@@ -44,7 +44,7 @@
       <string>cv87 1</string> <!-- better curly braces -->
     </edit>
   </match>
-  <match target="font">
+  <match target="scan">
     <test name="family" compare="eq" ignore-blanks="true">
       <string>Iosevka SS10</string>
     </test>
