fontconfig: using better β and <= >=

--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -1,85 +1,72 @@
-<?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
- <!-- =============== 渲染设置 =============== -->
- <match target="scan">
-  <!-- 抗锯齿 -->
-  <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
-  <edit name="antialias" mode="assign">
-   <bool>true</bool>
-  </edit>
-  <!-- 字体提示 -->
-  <!-- BCI (字节码解释器) -->
-  <edit name="hinting" mode="assign">
-   <bool>true</bool>
-  </edit>
-  <!-- 自动微调 -->
-  <edit name="autohint" mode="assign">
-   <bool>false</bool>
-  </edit>
-  <!-- Hintstyle -->
-  <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
-  <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
-  <edit name="hintstyle" mode="assign">
-   <const>hintslight</const>
-  </edit>
-  <!-- 像素对齐 -->
-  <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
-  <edit name="rgba" mode="assign">
-   <const>rgb</const>
-  </edit>
-  <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
-  <edit name="lcdfilter">
-   <const>lcdlight</const>
-  </edit>
-  <!-- 禁用内嵌点阵字体 -->
-  <edit name="embeddedbitmap">
-   <bool>false</bool>
-  </edit>
-  <!-- 禁用合成粗体 -->
-  <edit name="embolden">
-   <bool>false</bool>
-  </edit>
- </match>
- <!-- Twemoji 不支持关闭内嵌点阵 -->
- <match target="scan">
-  <test qual="any" name="family">
-   <string>Twemoji</string>
-  </test>
-  <edit name="embeddedbitmap" mode="assign">
-   <bool>true</bool>
-  </edit>
- </match>
- <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
- <match target="scan">
-  <test qual="any" name="family">
-   <string>Noto Color Emoji</string>
-  </test>
-  <edit name="scalable" mode="assign">
-   <bool>true</bool>
-  </edit>
-  <edit name="embeddedbitmap" mode="assign">
-   <bool>true</bool>
-  </edit>
-  <edit name="hinting" mode="assign">
-   <bool>false</bool>
-  </edit>
-  <edit name="antialias" mode="assign">
-   <bool>false</bool>
-  </edit>
- </match>
- <!-- 我真不理解一个等宽字体要连字功能干嘛？故意变得不等宽？ -->
- <!--
+  <description>渲染设置</description>
   <match target="scan">
-    <test name="family" qual="any">
-      <string>Monaco</string>
-    </test>
-    <edit name="fontfeatures" mode="append">
-      <string>liga off</string>
-      <string>dlig off</string>
+    <!-- 抗锯齿 -->
+    <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <!-- 字体提示 -->
+    <!-- BCI (字节码解释器) -->
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <!-- 自动微调 -->
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <!-- Hintstyle -->
+    <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
+    <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
+    <edit name="hintstyle" mode="assign">
+      <const>hintslight</const>
+    </edit>
+    <!-- 像素对齐 -->
+    <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
+    <edit name="rgba" mode="assign">
+      <const>rgb</const>
+    </edit>
+    <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
+    <edit name="lcdfilter">
+      <const>lcdlight</const>
+    </edit>
+    <!-- 禁用内嵌点阵字体 -->
+    <edit name="embeddedbitmap">
+      <bool>false</bool>
+    </edit>
+    <!-- 禁用合成粗体 -->
+    <edit name="embolden">
+      <bool>false</bool>
     </edit>
   </match>
-  -->
- <dir>~/.fonts</dir>
+  <!-- Twemoji 不支持关闭内嵌点阵 -->
+  <match target="scan">
+    <test qual="any" name="family">
+      <string>Twemoji</string>
+    </test>
+    <edit name="embeddedbitmap" mode="assign">
+      <bool>true</bool>
+    </edit>
+  </match>
+  <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
+  <match target="scan">
+    <test qual="any" name="family">
+      <string>Noto Color Emoji</string>
+    </test>
+    <edit name="scalable" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="embeddedbitmap" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="antialias" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
