--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -26,7 +26,7 @@
       https://bugreports.qt.io/browse/QTBUG-78645
       https://bugzilla.mozilla.org/show_bug.cgi?id=1744765
   
-      Test command: echo -e "y * _ {}" | pango-view __font="Iosevka" /dev/stdin
+      Test command: echo -e "y * _ {} <= >= β" | pango-view __font="Iosevka" /dev/stdin
   
   -->
   
@@ -39,9 +39,11 @@
       <string>ss10 on</string> <!-- using SS10 variant shape -->
       <string>zero on</string> <!-- slashed zero -->
       <string>cv49 1</string> <!-- straight y -->
+	  <string>cv52 8</string> <!-- better beta -->
       <string>cv82 5</string> <!-- I like this star -->
       <string>cv83 2</string> <!-- underline, not too high, not too low -->
       <string>cv87 1</string> <!-- better curly braces -->
+	  <string>cv95 2</string> <!-- better >= -->
     </edit>
   </match>
   <match target="scan">
@@ -51,9 +53,11 @@
     <edit name="fontfeatures" mode="append">
       <string>zero on</string> <!-- slashed zero -->
       <string>cv49 1</string> <!-- straight y -->
+	  <string>cv52 8</string> <!-- better beta -->
       <string>cv82 5</string> <!-- I like this star -->
       <string>cv83 2</string> <!-- underline, not too high, not too low -->
       <string>cv87 1</string> <!-- better curly braces -->
+	  <string>cv95 2</string> <!-- better >= -->
     </edit>
   </match>
 </fontconfig>
