--- a/fontconfig/.config/fontconfig/conf.d/52-telegram-opensans.conf
+++ b/fontconfig/.config/fontconfig/conf.d/52-telegram-opensans.conf
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+  <description>为 telegram 设置取代字体</description>
   <match>
     <test name="prgname">
       <string>telegram-desktop</string>
