--- a/fontconfig/.config/fontconfig/conf.d/53-language-noto-cjk.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-language-noto-cjk.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-  <!-- 让 Noto CJK 在不同语言下采用不同的汉字变体。 -->
+  <description>让 Noto CJK 在不同语言下采用不同的汉字变体。</description>
 
   <match target="pattern">
     <test name="lang">
