fontconfig: if no Iosevka, using Monaco as monospace font

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -106,6 +106,7 @@
       <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
+      <string>Monaco</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
       <string>Sarasa Term J</string>
@@ -127,6 +128,7 @@
     <edit binding="same" mode="prepend" name="family">
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
+      <string>Monaco</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
       <string>Sarasa Term J</string>
