sysctl: enable unprivileged user namespaces to use bubblewrap

--- a/sysctl/99-sysctl.conf
+++ b/sysctl/99-sysctl.conf
@@ -54,8 +54,8 @@ kernel.unprivileged_bpf_disabled = 1
 # disables kexec as it can be used to livepatch the running kernel
 kernel.kexec_load_disabled = 1
 
-# disable unprivileged user namespaces to decrease attack surface
-kernel.unprivileged_userns_clone = 0
+# enable unprivileged user namespaces to use bubblewrap
+kernel.unprivileged_userns_clone = 1
 
 # allow for more PIDs
 # this value can be up to:
