git: add difftool difftastic

--- a/git/.config/git/diff-specified.config
+++ b/git/.config/git/diff-specified.config
@@ -9,3 +9,7 @@
 # Use `hexdump` to diff binary files.
 [diff "bin"]
     textconv = hexdump -v -C
+
+# https://difftastic.wilfred.me.uk/getting_started.html#git-difftool
+[difftool "difftastic"]
+        cmd = difftastic "$LOCAL" "$REMOTE"
