fontconfig: try Zilla Slab

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -80,6 +80,10 @@
       <string>serif</string>
     </test>
     <edit binding="same" mode="prepend" name="family">
+      <!--
+         Its number jump up and down, so disable it
+        <string>Zilla Slab</string>
+      -->
       <string>Roboto Slab</string>
       <string>Noto Serif CJK SC</string>
       <string>Noto Serif CJK TC</string>
