kitty: set Iosevka font features

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Font
-font_family      monospace
+font_family      Iosevka Term
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -13,7 +13,8 @@ disable_ligatures cursor
 
 # Fonts Feature Configuration
 # https://sw.kovidgoyal.net/kitty/conf/#opt-kitty.font_features
-#font_feature
+font_feature Iosevka +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
+font_feature Iosevka-Term +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
 
 # Cursor Shape (available: block beam underline)
 cursor_shape beam
