curl: add some config

--- a/curl/.config/.curlrc
+++ b/curl/.config/.curlrc
@@ -3,3 +3,12 @@ referer = ";auto"
 
 # Wait 60 seconds before timing out.
 connect-timeout = 60
+
+# Support gzip responses.
+compressed
+
+# Create the necessary local directory hierarchy as needed.
+create-dirs
+
+# Follow HTTP redirects.
+#location
