git: add instead for GitHub and BitBucket

--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -7,7 +7,15 @@
     pushInsteadOf = git://aur.archlinux.org/
 # https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/
 [url "git@github.com:"]
-    pushInsteadOf = https://github.com/
+    pushInsteadOf = "github:"
+    pushInsteadOf = "https://github.com/"
+    pushInsteadOf = "git://github.com/"
 
-[url "git://gist.github.com/"]
-    insteadOf = "gist:"
+[url "git@gist.github.com:"]
+    pushInsteadOf = "gist:"
+    pushInsteadOf = "git://gist.github.com/"
+
+[url "git@bitbucket.org:"]
+    pushInsteadOf = "bitbucket:"
+    pushInsteadOf = "https://bitbucket.org/"
+    pushInsteadOf = "git://bitbucket.org/"
