--- a/vim/.editorconfig
+++ b/vim/.editorconfig
@@ -5,17 +5,16 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+#trim_trailing_whitespace = true
 
-# Matches multiple files with brace expansion notation
-# Set default charset
 [*.{js,py}]
 charset = utf-8
 
-# Tab indentation (no size specified)
-[Makefile]
+[Makefile{,mk}]
 indent_style = tab
 
-[*.md]
+[*.{md,markdown}]
 trim_trailing_whitespace = false
