--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -195,7 +195,7 @@ libera.local_hostname
 libera.usermode
 libera.command
 libera.command_delay
-libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,#debian-zh"
+libera.autojoin = "#aosc,#archlinux-cn,#archlinux-cn-offtopic,#fedora-zh,#gentoo-zh,#debian-zh,#fcitx"
 libera.autorejoin
 libera.autorejoin_delay
 libera.connection_timeout
