--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -33,3 +33,5 @@ with-subkey-fingerprint
 
 # https://www.kernel.org/doc/html/v5.15/process/maintainer-pgp-guide.html#web-of-trust-wot-vs-trust-on-first-use-tofu
 trust-model tofu+pgp
+# By  setting  --tofu-default-policy=unknown, this model can be used to implement the web of trust with TOFU's conflict detection algorithm, but without its assignment of positive trust values, which some security-conscious users don't like.
+tofu-default-policy unknown
