gpg: add comments on `cert-digest-algo SHA512`

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -9,6 +9,10 @@ default-key E35C89E45867AE35
 # https://en.wikipedia.org/wiki/Camellia_(cipher)
 # https://en.wikipedia.org/wiki/Advanced_Encryption_Standard
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
+# Althrough manual says "Be aware that if you choose an algorithm that GnuPG supports but other OpenPGP implementations do not,
+# then some users will not be able to use the key signatures you make, or quite possibly your entire key."
+# But I see SHA512 in RFC4880, so other OpenPGP implementations should support it.
+# On the other hand, there is only one OpenPGP implementation called GNUPG in practice.
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
 personal-cipher-preferences CAMELLIA256 TWOFISH AES256 CAMELLIA192 AES192 CAMELLIA128 AES BLOWFISH CAST5 3DES
