git: using git-delta instead of diff-so-fancy
because it supports git-blame

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -2,27 +2,29 @@
 [color]
     # auto is default since 1.8.4
     ui = auto
-[color "diff-highlight"]
-    oldNormal = red bold
-    oldHighlight = red bold 52
-    newNormal = green bold
-    newHighlight = green bold 22
-[color "diff"]
-    meta = 11
-    frag = magenta bold
-    func = 146 bold
-    commit = yellow bold
-    old = red bold
-    new = green bold
-    whitespace = red reverse
+#[color "diff-highlight"]
+#    oldNormal = red bold
+#    oldHighlight = red bold 52
+#    newNormal = green bold
+#    newHighlight = green bold 22
+#[color "diff"]
+#    meta = 11
+#    frag = magenta bold
+#    func = 146 bold
+#    commit = yellow bold
+#    old = red bold
+#    new = green bold
+#    whitespace = red reverse
 
 [core]
-    pager = diff-so-fancy | less --tabs=4 -RFX
+    pager = delta
+    #pager = diff-so-fancy | less --tabs=4 -RFX
     # enable escape for code large than 0x80
     quotePath = false
 
 [interactive]
-    diffFilter = diff-so-fancy --patch
+    #diffFilter = diff-so-fancy --patch
+    diffFilter = delta --color-only --features=interactive
 
 [diff-so-fancy]
     # By default, the separator for the file header uses Unicode line-drawing characters. If this is causing output errors on your terminal, set this to false to use ASCII characters instead. (Default: true)
@@ -35,3 +37,42 @@
     date = iso-local
 [format]
     pretty = fuller
+
+[delta]
+    commit-style                  = bold yellow
+    file-style                    = brightyellow
+    file-decoration-style         = cyan ul
+    hunk-header-style             = bold purple
+    minus-style                   = bold red
+    minus-non-emph-style          = bold red
+    minus-emph-style              = bold red 52
+    minus-empty-line-marker-style = normal "#3f0001"
+    zero-style                    = normal
+    plus-style                    = bold green
+    plus-non-emph-style           = bold green
+    plus-emph-style               = bold green 22
+    plus-empty-line-marker-style  = normal "#002800"
+    whitespace-error-style        = reverse red
+    hunk-header-decoration-style  = blue ul ol
+    true-color                    = auto
+    file-added-label              = 'added:'
+    file-modified-label           = modified:
+    file-removed-label            = 'removed:'
+    file-renamed-label            = 'renamed:'
+    right-arrow                   = '->  '
+    inspect-raw-lines             = true
+    keep-plus-minus-markers       = false
+    line-numbers                  = true
+    line-numbers-minus-style      = red
+    line-numbers-zero-style       = white
+    line-numbers-plus-style       = green
+    line-numbers-left-style       = blue
+    line-numbers-right-style      = blue
+    max-line-distance             = 0.6
+    max-line-length               = 512
+    hyperlinks                    = true
+    navigate                      = true
+    navigate-regex                = '^(commit|added:|removed:|renamed:|modified:|•)'
+
+[merge]
+    conflictstyle = diff3
