--- a/git/.config/git/diff-specified.config
+++ b/git/.config/git/diff-specified.config
@@ -13,3 +13,5 @@
 # https://difftastic.wilfred.me.uk/getting_started.html#git-difftool
 [difftool "difftastic"]
         cmd = difftastic "$LOCAL" "$REMOTE"
+
+# vim: set ft=gitconfig et:
