--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -55,10 +55,10 @@
     whitespace-error-style        = reverse red
     hunk-header-decoration-style  = blue ul ol
     true-color                    = auto
-    file-added-label              = 'added:'
+    file-added-label              = added:
     file-modified-label           = modified:
-    file-removed-label            = 'removed:'
-    file-renamed-label            = 'renamed:'
+    file-removed-label            = removed:
+    file-renamed-label            = renamed:
     right-arrow                   = '->  '
     inspect-raw-lines             = true
     keep-plus-minus-markers       = false
@@ -76,3 +76,5 @@
 
 [merge]
     conflictstyle = diff3
+
+# vim: set ft=gitconfig et:
