--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -19,3 +19,5 @@
     pushInsteadOf = "bitbucket:"
     pushInsteadOf = "https://bitbucket.org/"
     pushInsteadOf = "git://bitbucket.org/"
+
+# vim: set ft=gitconfig et:
