--- a/git/.config/git/proxy.config
+++ b/git/.config/git/proxy.config
@@ -3,3 +3,5 @@
     proxy = socks5://127.0.0.1:1089
 [https "https://github.com"]
     proxy = socks5://127.0.0.1:1089
+
+# vim: set ft=gitconfig et:
