git(delta): enable side-by-side as an workaround for line-wrapping
[1]: https://github.com/dandavison/delta/issues/299#issuecomment-997388757

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -68,11 +68,11 @@
     line-numbers-plus-style       = green
     line-numbers-left-style       = blue
     line-numbers-right-style      = blue
-    max-line-distance             = 0.6
-    max-line-length               = 512
     hyperlinks                    = true
     navigate                      = true
     navigate-regex                = '^(commit|added:|removed:|renamed:|modified:|•)'
+    # FIXME: As a workarround, https://github.com/dandavison/delta/issues/299#issuecomment-997388757
+    side-by-side = true
 
 [merge]
     conflictstyle = diff3
